--- a/index.html
+++ b/index.html
@@ -33,5 +33,21 @@
             </div>
         </a>
     </section>
+    <section id="qr-code" class="sect">
+        <section class="sect-title">
+            <a href="product-preview.html" class="link">Product Preview</a>
+            <p>Recreating a complex product card for mobile and desktop design</p>
+        </section>
+        <a class="flex"  href="product-preview.html">
+            <div>
+                <p>desktop</p>
+                <img src="screenshots/perfume-desktop.png" alt="" screenshot="desktop">
+            </div>
+            <div>
+                <p>mobile</p>
+                <img src="screenshots/perfume-mobile.png" alt="" screenshot="desktop">
+            </div>
+        </a>
+    </section>
 </body>
 </html>
