--- a/qr-code.html
+++ b/qr-code.html
@@ -62,7 +62,7 @@
     </div>
     <div class="attribution">
         Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-        Coded by <a href="#">Your Name Here</a>.
+        Coded by <a href="#">Raionus</a>.
     </div>
 </body>
 
