fix img for github

--- a/product-preview.html
+++ b/product-preview.html
@@ -26,12 +26,12 @@
             <!-- use img set -->
             <picture class="card-head">
                 <source 
-                srcset="/product-preview-card-component-main/images/image-product-desktop.jpg"
+                srcset="./product-preview-card-component-main/images/image-product-desktop.jpg"
                 media="(min-width: 768px)"
                 />
                 <img
                 class="card-img"
-                    src="/product-preview-card-component-main/images/image-product-mobile.jpg"
+                    src="./product-preview-card-component-main/images/image-product-mobile.jpg"
                     alt="Perfume laid in a table with some leafs"
                 />  
             </picture>
