--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <section id="qr-code" class="sect">
         <section class="sect-title">
             <a href="qr-code.html" class="link">QR Code Recreation</a>
-            <p>Recreating a QR code widget given a mobile and desktop design</p>
+            <p>Creating a QR code widget given a mobile and desktop design</p>
         </section>
         <a class="flex"  href="qr-code.html">
             <div>
@@ -33,10 +33,10 @@
             </div>
         </a>
     </section>
-    <section id="qr-code" class="sect">
+    <section id="product-preview" class="sect">
         <section class="sect-title">
             <a href="product-preview.html" class="link">Product Preview</a>
-            <p>Recreating a complex product card for mobile and desktop design</p>
+            <p>Creating a complex product card for mobile and desktop design</p>
         </section>
         <a class="flex"  href="product-preview.html">
             <div>
@@ -46,6 +46,24 @@
             <div>
                 <p>mobile</p>
                 <img src="screenshots/perfume-mobile.png" alt="" screenshot="desktop">
+            </div>
+        </a>
+    </section>
+    <section id="rating" class="sect">
+        <section class="sect-title">
+            <a href="rating-component.html" class="link">Rating Component</a>
+            <p>Creating a multi-page rating form with vanilla JavaScript.</p>
+        </section>
+        <a class="flex"  href="rating-component.html">
+            <div>
+                <p>desktop</p>
+                <img src="screenshots/rating-desktop.png" alt="" screenshot="desktop">
+                <img src="screenshots/rating-desktop-2.png" alt="" screenshot="desktop">
+            </div>
+            <div>
+                <p>mobile</p>
+                <img src="screenshots/rating-mobile.png" alt="" screenshot="desktop">
+                <img src="screenshots/rating-mobile-2.png" alt="" screenshot="desktop">
             </div>
         </a>
     </section>
