nft-preview-card finish

--- a/nft-preview-card.html
+++ b/nft-preview-card.html
@@ -1,60 +1,78 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- displays site properly based on user's device -->
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./product-preview-card-component-main/images/favicon-32x32.png">
-  
-  <title>Frontend Mentor | Product preview card component</title>
+    <link rel="icon" type="image/png" sizes="32x32"
+        href="./product-preview-card-component-main/images/favicon-32x32.png">
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
-  <link rel="stylesheet" href="reset.css">
-    <link rel="stylesheet" href="./product-preview-card-component-main//style.css">
-  <!-- fonts -->
-  <link rel="preconnect" href="https://fonts.googleapis.com">
+    <title>Frontend Mentor | Product preview card component</title>
+
+    <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
+    <style>
+        .attribution {
+            font-size: 11px;
+            text-align: center;
+        }
+
+        .attribution a {
+            color: hsl(228, 45%, 44%);
+        }
+    </style>
+    <link rel="stylesheet" href="reset.css">
+    <link rel="stylesheet" href="./nft-preview-card-component-main/style.css">
+    <!-- fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Fraunces:opsz,wght@9..144,700&family=Montserrat:wght@500;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;600&display=swap" rel="stylesheet">
 </head>
+
 <body>
-    <div class="container">
-        <div class="card center-it">
-            <!-- use img set -->
-            <picture class="card-head">
-                <source 
-                srcset="./product-preview-card-component-main/images/image-product-desktop.jpg"
-                media="(min-width: 768px)"
-                />
-                <img
-                class="card-img"
-                    src="./product-preview-card-component-main/images/image-product-mobile.jpg"
-                    alt="Perfume laid in a table with some leafs"
-                />  
-            </picture>
-            <div class="card-body">
-                <div class="card-cat">perfume</div>
-                <div class="card-title title">Gabrielle Essence Eau De Parfum</div>
-                <div class="card-desc">A floral, solar and voluptuous interpretation composed by Olivier Polge, Perfumer-Creator for the House of CHANEL.</div>
-                <div class="card-price">
-                    <div class="card-price-1 title">$149.99</div>
-                    <div class="card-price-2">$169.99</div>
+    <div class="card center-it">
+        <div class="card-head">
+            <img src="./nft-preview-card-component-main/images/image-equilibrium.jpg" alt="">
+            <div class="--overlay"></div>
+        </div>
+        <div class="card-body">
+            <div class="card-info">
+                <div class="card-title">Equilibrium #3429</div>
+                <div class="card-text">Our Equilibrium collection promotes balance and calm.</div>
+            </div>
+            <div class="card-price">
+                <div class="card-bid" data-cur="ETH">
+                    <!-- icon -->
+                    <svg width="11" height="18" xmlns="http://www.w3.org/2000/svg">
+                        <path
+                            d="M11 10.216 5.5 18 0 10.216l5.5 3.263 5.5-3.262ZM5.5 0l5.496 9.169L5.5 12.43 0 9.17 5.5 0Z"
+                            fill="#00FFF8" />
+                    </svg>
+                    <span>0.041</span>
                 </div>
-                <button class="card-cta">
-                    <!-- cart icon -->
-                    <svg width="15" height="16" xmlns="http://www.w3.org/2000/svg"><path d="M14.383 10.388a2.397 2.397 0 0 0-1.518-2.222l1.494-5.593a.8.8 0 0 0-.144-.695.8.8 0 0 0-.631-.28H2.637L2.373.591A.8.8 0 0 0 1.598 0H0v1.598h.983l1.982 7.4a.8.8 0 0 0 .799.59h8.222a.8.8 0 0 1 0 1.599H1.598a.8.8 0 1 0 0 1.598h.943a2.397 2.397 0 1 0 4.507 0h1.885a2.397 2.397 0 1 0 4.331-.376 2.397 2.397 0 0 0 1.12-2.021ZM11.26 7.99H4.395L3.068 3.196h9.477L11.26 7.991Zm-6.465 6.392a.8.8 0 1 1 0-1.598.8.8 0 0 1 0 1.598Zm6.393 0a.8.8 0 1 1 0-1.598.8.8 0 0 1 0 1.598Z" fill="#FFF"/></svg>
-                    <span>Add to Cart</span>
-                </button>
+                <div class="card-time">
+                    <!-- icon -->
+                    <svg width="17" height="17" xmlns="http://www.w3.org/2000/svg">
+                        <path
+                            d="M8.305 2.007a6.667 6.667 0 1 0 0 13.334 6.667 6.667 0 0 0 0-13.334Zm2.667 7.334H8.305a.667.667 0 0 1-.667-.667V6.007a.667.667 0 0 1 1.334 0v2h2a.667.667 0 0 1 0 1.334Z"
+                            fill="#8BACD9" />
+                    </svg>
+                    <span>3 days left</span>
+                </div>
+            </div>
+            <div class="card-attribution">
+                <!-- img -->
+                <img src="./nft-preview-card-component-main/images/image-avatar.png" alt="">
+                <span>Creation of <a href="#">Jules Wyvern</a></span>
             </div>
         </div>
     </div>
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Raionus</a>.
-  </div>
+
+    <div class="attribution">
+        Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
+        Coded by <a href="#">Raionus</a>.
+    </div>
 </body>
+
 </html>
