--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
     <section id="stat-preview" class="sect">
         <section class="sect-title">
             <a href="stats-preview.html" class="link">Eye-catcher with Stats</a>
-            <p>Creating a product card with active hover states and image overlays</p>
+            <p>Eyecatching graphic with supporting stats</p>
         </section>
         <a class="flex link-hover"  href="stats-preview.html">
             <div>
