Update index with 3-column project

--- a/index.html
+++ b/index.html
@@ -91,6 +91,7 @@
             </div>
         </a>
     </section>
+    <!-- stat preview -->
     <section id="stat-preview" class="sect">
         <section class="sect-title">
             <a href="stats-preview.html" class="link">Eye-catcher with Stats</a>
@@ -104,6 +105,23 @@
             <div>
                 <p>mobile</p>
                 <img src="screenshots/stats-preview-mobile.png" alt="" screenshot="mobile">
+            </div>
+        </a>
+    </section>
+    <!-- 3-column -->
+    <section id="stat-preview" class="sect">
+        <section class="sect-title">
+            <a href="3-column-card.html" class="link">3 Column Card w/ Vue</a>
+            <p>3 column card using reusable components created in Vue. Variations created with slots.</p>
+        </section>
+        <a class="flex link-hover"  href="3-column-card.html">
+            <div>
+                <p>desktop</p>
+                <img src="screenshots/3-column-desktop.png" alt="" screenshot="desktop">
+            </div>
+            <div>
+                <p>mobile</p>
+                <img src="screenshots/3-column-mobile.png" alt="" screenshot="mobile">
             </div>
         </a>
     </section>
