--- a/tutorial.html
+++ b/tutorial.html
@@ -4,10 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="reset.css">
 </head>
 
 <body>
-    <div id="app" class="">
+    <div id="app">
     </div>
 </body>
 
