--- a/tutorial.html
+++ b/tutorial.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="reset.css">
+    <link rel="stylesheet" href="./newsletter-sign-up-main/styles.css">
 </head>
 
 <body>
