--- a/tutorial.html
+++ b/tutorial.html
@@ -22,9 +22,33 @@
                     <p class="title bold mb-24 text-shadow">Stay updated!</p>
                     <p class="body bold mb-24">Join 60,000+ product managers receiving monthly updates on:</p>
                     <ul class="list mb-40">
-                        <li class="list-item mb-10">Product discovery and building what matters</li>
-                        <li class="list-item mb-10">Measuring to ensure updates are a success</li>
-                        <li class="list-item mb-10">And much more!</li>
+                        <li class="list-item mb-10">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="21" height="21" viewBox="0 0 21 21">
+                                <g fill="none">
+                                    <circle cx="10.5" cy="10.5" r="10.5" fill="#FF6155" />
+                                    <path stroke="#FFF" stroke-width="2" d="M6 11.381 8.735 14 15 8" />
+                                </g>
+                            </svg>
+                            Product discovery and building what matters
+                        </li>
+                        <li class="list-item mb-10">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="21" height="21" viewBox="0 0 21 21">
+                                <g fill="none">
+                                    <circle cx="10.5" cy="10.5" r="10.5" fill="#FF6155" />
+                                    <path stroke="#FFF" stroke-width="2" d="M6 11.381 8.735 14 15 8" />
+                                </g>
+                            </svg>
+                            Measuring to ensure updates are a success
+                        </li>
+                        <li class="list-item mb-10">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="21" height="21" viewBox="0 0 21 21">
+                                <g fill="none">
+                                    <circle cx="10.5" cy="10.5" r="10.5" fill="#FF6155" />
+                                    <path stroke="#FFF" stroke-width="2" d="M6 11.381 8.735 14 15 8" />
+                                </g>
+                            </svg>
+                            And much more!
+                        </li>
                     </ul>
                 </div>
                 <div class="c-dark-navy">
