mobile modal end

--- a/tutorial.html
+++ b/tutorial.html
@@ -13,7 +13,7 @@
 
 <body>
     <div id="app">
-        <div class="modal-start">
+        <div class="modal-start --hide">
             <div class="modal-banner">
                 <img src="./newsletter-sign-up-main/assets/images/illustration-sign-up-mobile.svg" alt="">
             </div>
@@ -62,6 +62,27 @@
                     <button class="submit c-white">Subscribe to monthly newsletter</button>
                 </div>
             </div>
+        </div>
+        <div class="modal-success">
+            <div class="modal-success-icon">
+                <svg xmlns="http://www.w3.org/2000/svg" width="64" height="64" viewBox="0 0 64 64">
+                    <defs>
+                        <linearGradient id="a" x1="100%" x2="0%" y1="0%" y2="100%">
+                            <stop offset="0%" stop-color="#FF6A3A" />
+                            <stop offset="100%" stop-color="#FF527B" />
+                        </linearGradient>
+                    </defs>
+                    <g fill="none">
+                        <circle cx="32" cy="32" r="32" fill="url(#a)" />
+                        <path stroke="#FFF" stroke-width="4" d="m18.286 34.686 8.334 7.98 19.094-18.285" />
+                    </g>
+                </svg>
+            </div>
+            <div class="modal-success-title title bold">Thanks for subscribing!</div>
+            <div class="body">A confirmation email has been sent to <strong class="bold">ash@loremcompany.com</strong>.
+                Please open it and click the
+                button inside to confirm your subscription</div>
+            <submit class="modal-success-submit submit c-white">Dismiss message</submit>
         </div>
     </div>
 </body>
