--- a/tutorial.html
+++ b/tutorial.html
@@ -13,7 +13,7 @@
 
 <body>
     <div id="app">
-        <div class="modal-start --hide">
+        <div class="modal-start">
             <div class="modal-banner">
                 <img src="./newsletter-sign-up-main/assets/images/illustration-sign-up-mobile.svg" alt="">
             </div>
@@ -52,7 +52,7 @@
                     </ul>
                 </div>
                 <div class="c-dark-navy">
-                    <div class="input-group mb-24">
+                    <div class="input-group has-error mb-24">
                         <div class="input-group-top mb-8">
                             <p class="input-label body-small bold">Email address</p>
                             <p class="input-error body-small c-vermillion bold">Valid email required</p>
@@ -63,7 +63,7 @@
                 </div>
             </div>
         </div>
-        <div class="modal-success">
+        <div class="modal-success --hide">
             <div class="modal-success-icon">
                 <svg xmlns="http://www.w3.org/2000/svg" width="64" height="64" viewBox="0 0 64 64">
                     <defs>
