start desktop modal

--- a/tutorial.html
+++ b/tutorial.html
@@ -20,7 +20,8 @@
             <div class="modal-body">
                 <div class="c-dark-navy">
                     <p class="title bold mb-24 text-shadow">Stay updated!</p>
-                    <p class="body bold mb-24">Join 60,000+ product managers receiving monthly updates on:</p>
+                    <p class="body modal-body-text mb-24">Join 60,000+ product managers receiving monthly updates on:
+                    </p>
                     <ul class="list mb-40">
                         <li class="list-item mb-10">
                             <svg xmlns="http://www.w3.org/2000/svg" width="21" height="21" viewBox="0 0 21 21">
