--- a/tutorial.html
+++ b/tutorial.html
@@ -13,7 +13,7 @@
 
 <body>
     <div id="app">
-        <div id="modal-start" class="modal-start">
+        <div id="modal-start" class="modal-start --hide">
             <div class="modal-banner">
                 <img src="./newsletter-sign-up-main/assets/images/illustration-sign-up-mobile.svg" alt="">
             </div>
@@ -64,7 +64,7 @@
                 </div>
             </div>
         </div>
-        <div id="modal-success" class="modal-success --hide">
+        <div id="modal-success" class="modal-success">
             <div class="modal-success-icon">
                 <svg xmlns="http://www.w3.org/2000/svg" width="64" height="64" viewBox="0 0 64 64">
                     <defs>
@@ -80,7 +80,8 @@
                 </svg>
             </div>
             <div class="modal-success-title title bold">Thanks for subscribing!</div>
-            <div class="body">A confirmation email has been sent to <strong class="bold">ash@loremcompany.com</strong>.
+            <div class="body --mb-24">A confirmation email has been sent to <strong
+                    class="bold">ash@loremcompany.com</strong>.
                 Please open it and click the
                 button inside to confirm your subscription</div>
             <submit id="dismiss" class="modal-success-submit submit c-white">Dismiss message</submit>
